--- a/.github/workflows/weekly-backup.yml
+++ b/.github/workflows/weekly-backup.yml
@@ -1,35 +1,29 @@
-name: Weekly Backup
-
+name: Weekly Backup (WordJam)
 on:
   schedule:
-    - cron: '0 0 * * 1'   # 毎週月曜 9:00 JST
-  workflow_dispatch:
-
+    - cron: "0 0 * * 1"     # UTC日曜0:00 = JST月曜9:00
+  workflow_dispatch: {}
 jobs:
-  backup:
+  weekly:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      - name: Install deps
-        run: npm ci
-
-      - name: Run backup script
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with: { node-version: "20" }
+      - run: npm ci
+      - name: Append to Notion
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_PAGE_ID: ${{ secrets.NOTION_PAGE_ID }}
-          GIT_AUTHOR_NAME: Yo-GitHub
-          GIT_AUTHOR_EMAIL: Yo-GitHub@users.noreply.github.com   # ←ここダミーを差し替え
+        run: npm run backup:notion
+      - name: Snapshot JSONs
+        run: scripts/snapshot.sh
+      - name: Commit snapshot
         run: |
-          node scripts/backup-to-notion.js
-          git config --global user.name "${GIT_AUTHOR_NAME}"
-          git config --global user.email "${GIT_AUTHOR_EMAIL}"
+          git config user.name  "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add backups/
-          git commit -m "Weekly backup"
-          git push origin main
+          git commit -m "weekly snapshot: $(date -u +'%Y-%m-%d')" || echo "no changes"
+          git push
