--- a/package.json
+++ b/package.json
@@ -3,7 +3,5 @@
   "private": true,
   "type": "module",
   "dependencies": { "@notionhq/client": "^2.2.14" },
-  "scripts": {
-    "backup:notion": "node scripts/backup-to-notion.js docs/implementation_memo.md"
-  }
+  "scripts": { "backup:notion": "node scripts/backup-to-notion.js docs/implementation_memo.md" }
 }
