--- a/.github/workflows/weekly-backup.yml
+++ b/.github/workflows/weekly-backup.yml
@@ -1,7 +1,7 @@
 name: Weekly Backup (WordJam)
 on:
   schedule:
-    - cron: "0 0 * * 1"     # UTC日曜0:00 = JST月曜9:00
+    - cron: "0 0 * * 1"   # UTC月曜0:00 = JST月曜9:00
   workflow_dispatch: {}
 jobs:
   weekly:
@@ -12,14 +12,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: { node-version: "20" }
-      - run: npm ci
+      - name: Install deps
+        run: npm install --no-fund --no-audit
       - name: Append to Notion
         env:
           NOTION_TOKEN: ${{ secrets.NOTION_TOKEN }}
           NOTION_PAGE_ID: ${{ secrets.NOTION_PAGE_ID }}
         run: npm run backup:notion
       - name: Snapshot JSONs
-        run: scripts/snapshot.sh
+        run: bash scripts/snapshot.sh
       - name: Commit snapshot
         run: |
           git config user.name  "github-actions[bot]"
