--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "wordjam-weekly-backup",
   "private": true,
   "type": "module",
-  "dependencies": { "@notionhq/client": "^2.2.14" },
-  "scripts": { "backup:notion": "node scripts/backup-to-notion.js docs/implementation_memo.md" }
+  "dependencies": {
+    "@notionhq/client": "^2.3.0"
+  },
+  "scripts": {
+    "backup:notion": "node scripts/backup-to-notion.js docs/implementation_memo.md"
+  }
 }
